fixed alignment

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -31,7 +31,7 @@
   color: #5e5e5e;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 800px) {
    .topnav {
       width: 100%;
    }
